# remote-host-controller

./: .dockerignore  CMakeLists.txt  README.md  UbuntuDockerfile.dockerfile  conanfile.txt  run-container.sh
apps/: CMakeLists.txt  main.cpp  process_control.cpp  ssh-service.cpp  test_program.cpp
cmake/: CMakeHelpers.cmake
include/: ClientConnectionController.hpp  ClientService.hpp  CommandLineTaskCreator.hpp  CommandLineTaskHandler.hpp  PeerFactory.hpp  PeerToPeerConnection.hpp  RemoteHostConnectionController.hpp  RemoteHostListenerService.hpp  ShellHandler.hpp  TaskExecutor.hpp  TaskScheduler.hpp  Types.hpp  Utils.hpp
include/auxiliary/: AESCryptographer.hpp  RSACryptographer.hpp  Runnable.hpp
include/client/: ClientConnectionController.hpp  ServiceConnector.hpp
include/remote/: RemoteHostConnectionController.hpp  RemoteHostListenerService.hpp  ShellHandler.hpp  StreamReader.hpp
src/: CMakeLists.txt  ClientConnectionController.cpp  ClientService.cpp  CommandLineTaskCreator.cpp  CommandLineTaskHandler.cpp  PeerFactory.cpp  PeerToPeerConnection.cpp  RemoteHostConnectionController.cpp  RemoteHostListenerService.cpp  ShellHandler.cpp  TaskExecutor.cpp  TaskScheduler.cpp
src/auxiliary/: AESCryptographer.cpp  CMakeLists.txt  RSACryptographer.cpp  Runnable.cpp
src/auxiliary/socket/: SecureSocket.cpp  ZMQSocket.cpp
src/client/: ClientConnectionController.cpp  ServiceConnector.cpp
src/remote/: RemoteHostConnectionController.cpp  RemoteHostListenerService.cpp  ShellHandler.cpp  StreamReader.cpp
tests/: CMakeLists.txt
tests/integration_tests/: CMakeLists.txt  SecureSocketTest.cpp  exampleIntegrationTest.cpp
tests/learning_tests/: CMakeLists.txt  PstreamsLearningTest.cpp
tests/mocks/: SocketMock.hpp
tests/unit_tests/: AESCryptographerTest.cpp  CMakeLists.txt  RSACryptographerTest.cpp  (+1 more)
(+4 files in other folders)
